# mle-cv-assignment

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd-pipeline.yml
1_solution_designing/: README.md
2-solution-on-edge-implementation/: README.md
2_solution_on_edge_implementation/: README.md  run_inference.py
3_cloud_ci_cd/: README.md
