[tool.poetry]
name = "2_solution_on_edge_implementation"
version = "0.1.0"
description = ""
authors = ["e.calleris"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
torch = "^2.5.1"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
